src/objects/FedRAMP_Contact__c.object
<CustomObject>
    <description>FedRAMP Contacts object for FedRAMP application to track FedRAMP Contacts and Leveraging Agencies</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSP_Address__c</fullName>
        <formula>Contact__r.Account.BillingStreet &amp;&quot; &quot; &amp;  Contact__r.Account.BillingCity &amp;&quot; &quot; &amp; Contact__r.Account.BillingState &amp;&quot; &quot; &amp;Contact__r.Account.BillingPostalCode &amp;&quot; &quot; &amp; Contact__r.Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSP Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSP_Name__c</fullName>
        <formula>Package__r.CSP__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSP Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Organization_Type__c</fullName>
        <label>Contact Organization Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud Service Provider</fullName>
                </value>
                <value>
                    <fullName>Requesting Organization</fullName>
                </value>
                <value>
                    <fullName>FedRAMP 3PAO Assessor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Back-up</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FedRAMP Contacts</relationshipLabel>
        <relationshipName>FedRAMP_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Leveraging_ATO_Date__c</fullName>
        <label>Leveraging ATO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Leveraging_Agency__c</fullName>
        <label>Leveraging Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Created_Date__c</fullName>
        <formula>Package__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Package Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Package_Id__c</fullName>
        <formula>Package__r.Name</formula>
        <label>Package Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <description>Master Detail relationship to Package</description>
        <label>Package</label>
        <referenceTo>FedRAMP_Package__c</referenceTo>
        <relationshipLabel>FedRAMP Contacts</relationshipLabel>
        <relationshipName>FedRAMP_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Name__c</fullName>
        <formula>Package__r.System_Name__c</formula>
        <label>System Name</label>
        <type>Text</type>
    </fields>
    <label>FedRAMP Contact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Type__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Package__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FC - {0000}</displayFormat>
        <label>FedRAMP Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FedRAMP Contacts</pluralLabel>
    <recordTypes>
        <fullName>FedRAMP_Contact</fullName>
        <active>true</active>
        <description>FedRAMP Contact fields only</description>
        <label>FedRAMP Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Leveraging_Agency</fullName>
        <active>true</active>
        <description>Leveraging Agency fields only</description>
        <label>Leveraging Agency</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>